feat api: update descriptions
