# server/src/main/java/ru/itmo/invoiceseparation/api/DebtApi.java
@@ -21,7 +21,7 @@ import org.springframework.web.multipart.MultipartFile;
 import javax.validation.Valid;
 import javax.validation.constraints.*;
 import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2022-04-21T14:27:58.516+03:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2022-05-26T01:45:00.234+03:00")
 
 @Validated
 @Api(value = "debt", description = "the debt API")
@@ -32,12 +32,13 @@ public interface DebtApi {
         @Authorization(value = "ApiKeyAuth")
     }, tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Ok.", response = Integer.class),
-        @ApiResponse(code = 403, message = "Unauthorized"),
-        @ApiResponse(code = 404, message = "No such user. If any user in list is missing") })
+        @ApiResponse(code = 200, message = "* Negative number: Provided user ows you * Positive number: You owe to requested user ", response = Integer.class),
+        @ApiResponse(code = 400, message = "Cannot get debt to yourself"),
+        @ApiResponse(code = 401, message = "You are not logged in"),
+        @ApiResponse(code = 404, message = "No such user") })
     @RequestMapping(value = "/debt",
         method = RequestMethod.GET)
-    ResponseEntity<Integer> debtGet(@NotNull @ApiParam(value = "User Id", required = true) @Valid @RequestParam(value = "user", required = true) String user,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey);
+    ResponseEntity<Integer> debtGet(@NotNull @ApiParam(value = "User to get incoming debt from", required = true) @Valid @RequestParam(value = "user", required = true) String user,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey);
 
 
     @ApiOperation(value = "", nickname = "debtPost", notes = "", authorizations = {
@@ -45,10 +46,11 @@ public interface DebtApi {
     }, tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Ok"),
-        @ApiResponse(code = 403, message = "Unauthorized"),
-        @ApiResponse(code = 404, message = "No such user. If any user in list is missing") })
+        @ApiResponse(code = 400, message = "Cannot pay debt to yourself or you owe nothing"),
+        @ApiResponse(code = 401, message = "You are not logged in"),
+        @ApiResponse(code = 404, message = "No such user") })
     @RequestMapping(value = "/debt",
         method = RequestMethod.POST)
-    ResponseEntity<Void> debtPost(@ApiParam(value = "" ,required=true )  @Valid @RequestBody UsernameRequest body,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey);
+    ResponseEntity<Void> debtPost(@ApiParam(value = "User to pay debt to" ,required=true )  @Valid @RequestBody UsernameRequest body,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey);
 
 }
